--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tetris JS</title>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
-</head>
-<body>
+    <title>Basic Tetris</title>
+  </head>
+  <body>
+
     <h3>Score:<span id="score">0</span></h3>
     <button id="start-button">Start/Pause</button>
-    <div class ="grid">
+
+    <div class="container">
+      <div class="grid">
         <div></div>
         <div></div>
         <div></div>
@@ -212,6 +213,42 @@
         <div></div>
         <div></div>
         <div></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+      </div>
+
+
+      <div class="mini-grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+
     </div>
+
+
+
   </body>
 </html>
